--- a/templates/partials/login_form.html
+++ b/templates/partials/login_form.html
@@ -30,6 +30,9 @@
                                 <input type="email" name="email" id="email" tabindex="1" class="form-control mandatory email" placeholder="Email *" value="">
                             </div>
                             <div class="form-group">
+                                <input type="tel" name="phone" id="phone" tabindex="1" class="form-control phone" placeholder="Phone" value="">
+                            </div>
+                            <div class="form-group">
                                 <input type="password" name="password" id="password" tabindex="2" class="form-control mandatory pass" placeholder="Password *">
                             </div>
                             <div class="form-group">
