--- a/templates/partials/add_trip.html
+++ b/templates/partials/add_trip.html
@@ -47,5 +47,8 @@
                 <input class="btn btn-default" type="submit" value="Submit trip" />
             </div>
         </div>
+        <div class="col-sm-12">
+            <div id="map_add"></div>
+        </div>
     </form>
 </script>
