--- a/templates/partials/book_trip.html
+++ b/templates/partials/book_trip.html
@@ -6,11 +6,12 @@
         <div class="col col-md-7">
             <h2><%= data.title %>
                 <span class="show-rating-container">
+                    <% var rating = parseInt(parseFloat(data.rating) * 100, 10) %>
                     <div class="star-rating star-rating-read star-rating-sm">
-                        <div class="star-rating-inner" style="width: 90.2%"></div>
+                        <div class="star-rating-inner" style="width: <%= rating / 5 %>%"></div>
                     </div>
                     <span class="star-rating-text">
-                        4.51
+                        <%= rating / 100 %>
                     </span>
                 </span>
             </h2>
@@ -19,31 +20,33 @@
                 <div class="trip-info">
                     <h3><%= data.short_description %></h3>
 
-                    <div class="rate-container">
-                        <h3>Rate this trip: </h3>
-                        <span>
-                            <form id="ratingsForm">
-                                <div class="stars enabled">
-                                    <input type="radio" data-value="1" name="star" class="star-1" id="star-1">
-                                    <label class="star-1" for="star-1">1</label>
-                                    <input type="radio" data-value="2" name="star" class="star-2" id="star-2">
-                                    <label class="star-2" for="star-2">2</label>
-                                    <input type="radio" data-value="3" name="star" class="star-3" id="star-3">
-                                    <label class="star-3" for="star-3">3</label>
-                                    <input type="radio" data-value="4" name="star" class="star-4" id="star-4">
-                                    <label class="star-4" for="star-4">4</label>
-                                    <input type="radio" data-value="5" name="star" class="star-5" id="star-5">
-                                    <label class="star-5" for="star-5">5</label>
-                                    <span></span>
-                                </div>
-                            </form>
-                        </span>
-                        <span class="rate-trip" data-id="<%= data.id %>">
-                            <button class="btn btn-rate"><i class="fa fa-check-circle"></i> Rate</button>
-                        </span>
-                    </div>
+                    <% if (!data.userRating) { %>
+                        <div class="rate-container">
+                            <h3>Rate this trip: </h3>
+                            <span>
+                                <form id="ratingsForm">
+                                    <div class="stars enabled">
+                                        <input type="radio" data-value="1" name="star" class="star-1" id="star-1">
+                                        <label class="star-1" for="star-1">1</label>
+                                        <input type="radio" data-value="2" name="star" class="star-2" id="star-2">
+                                        <label class="star-2" for="star-2">2</label>
+                                        <input type="radio" data-value="3" name="star" class="star-3" id="star-3">
+                                        <label class="star-3" for="star-3">3</label>
+                                        <input type="radio" data-value="4" name="star" class="star-4" id="star-4">
+                                        <label class="star-4" for="star-4">4</label>
+                                        <input type="radio" data-value="5" name="star" class="star-5" id="star-5">
+                                        <label class="star-5" for="star-5">5</label>
+                                        <span></span>
+                                    </div>
+                                </form>
+                            </span>
+                            <span class="rate-trip" data-id="<%= data.id %>">
+                                <button class="btn btn-rate"><i class="fa fa-check-circle"></i> Rate</button>
+                            </span>
+                        </div>
+                    <% } %>
 
-                    <br /><br />
+                    <br />
 
                     <div class="trip-description-container">
                         <%= data.description %>
