--- a/public/css/style.css
+++ b/public/css/style.css
@@ -672,7 +672,7 @@ span.rate-trip {
 
 .input-container textarea {
     resize: none;
-    padding: 15px;
+    padding: 15px 15px 30px;
     width: 100%;
     height: 1.5em;
 }
