--- a/templates/site_start.html
+++ b/templates/site_start.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <link rel="icon" href="/favicon.ico?v=2" />
     <title>Travelling Potato</title>
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
